--- a/PROJETO INDIVIDUAL/index.html
+++ b/PROJETO INDIVIDUAL/index.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gato Amigo</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <a class="logo" href="/">Gato Amigo</a>
+            <a class="Logo" href="pics/logo1.png"><img class="Logo" src="pics/logo.png"></a>
             <div class="mobile-menu">
                 <div class="line1"></div>
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
             <ul class="nav-list">
-                <li><a href="/"></a>Home</li>
-                <li><a href="/"></a>Gatos</li>
-                <li><a href="/"></a>ONG's</li>
-                <li><a href="/"></a>Cadastre-se</li>
+                <li>
+                    <a href="/">Home</a>
+                </li>
+
+                <li>
+                    <a href="/">Gatos</a>
+                </li>
+
+                <li>
+                    <a href="/">ONG's</a>
+                </li>
+
+                <li>
+                    <a href="/">Login</a>
+                </li>
             </ul>
         </nav>
     </header>
     <main>
+        <img class="main-img" src="pics/backgroundhome.jpg">
 
     </main>
 
