Subindo atualização de BD, diagrama com regra de negócio e site com novas funções

--- a/PROJETO INDIVIDUAL/index.html
+++ b/PROJETO INDIVIDUAL/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav id="navbar">
             <a class="Logo" href="pics/logo1.png"><img class="Logo" src="pics/logo.png"></a>
             <div class="mobile-menu">
                 <div class="line1"></div>
@@ -30,16 +30,67 @@
                 </li>
 
                 <li>
+                    <a href="/">|</a>
+                </li>
+
+                <li>
                     <a href="/">Login</a>
+                </li>
+
+                <li>
+                    <a href="/">Cadastro</a>
                 </li>
             </ul>
         </nav>
     </header>
+
+    <home>
+
+    </home>
     <main>
-        <img class="main-img" src="pics/backgroundhome.jpg">
+        
+        <!--<img class="main-img" src="pics/gato.jpg">-->
+
+        <div href="index.html" id="home" class="home">
+
+            <div class="home-gatos1">
+                <h1>Mais de trinta milhões de animais estão abandonados nas ruas do Brasil!</h1> <br> <br>
+                <h2>Desses trinta milhões, dez mihões são os gatos...</h2> <br> <br>
+                <h3>Você ONG, coloque aqui os gatos para serem doados enquanto usuários possam adotar eles!</h3>
+            </div>
+
+            <div>
+                <img class="main-img" src="pics/gato.jpg">
+            </div>
+
+        </div>
 
     </main>
 
-    <script src="mobnav/mobile-navbar.js"></script>
+    <rodape class="rodape">
+
+        <div class="rodape-logo-texto">
+            <a href="#navbar"><h1>Gato Amigo</h1></a> <br>
+            <p>A gato amigo visa disponibilizar <br>
+                uma interface de cadastro para <br> 
+                doar e adotar um gatinho. <br> <br>
+                Não possuimos nenhum fim lucrativo, <br>
+                apenas informativo.</p>
+        </div>
+
+        <div>
+
+            <a></a>
+
+            <a></a>
+
+            <p></p>
+
+        </div>
+
+    </rodape>
+
 </body>
 </html>
+
+<script src="mobnav/mobile-navbar.js"></script>
