Criação de cadastro e login junto da primeira validação

--- a/PROJETO INDIVIDUAL/index.html
+++ b/PROJETO INDIVIDUAL/index.html
@@ -18,15 +18,15 @@
             </div>
             <ul class="nav-list">
                 <li>
-                    <a href="/">Home</a>
+                    <a href="#home">Home</a>
                 </li>
 
                 <li>
-                    <a href="/">Gatos</a>
+                    <a href="#gatos">Gatos</a>
                 </li>
 
                 <li>
-                    <a href="/">ONG's</a>
+                    <a href="#ONG's">ONG's</a>
                 </li>
 
                 <li>
@@ -38,18 +38,21 @@
                 </li>
 
                 <li>
-                    <a href="/">Cadastro</a>
+                    <a href="verificacaocad.html">Cadastro</a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <home>
+    <!-- MAINPAGE -->
 
-    </home>
     <main>
         
         <!--<img class="main-img" src="pics/gato.jpg">-->
+
+    <!-- Homepage -->
+
+    <home>
 
         <div href="index.html" id="home" class="home">
 
@@ -65,27 +68,54 @@
 
         </div>
 
-    </main>
+    </home>
 
-    <rodape class="rodape">
+    <!-- Gatos -->
 
-        <div class="rodape-logo-texto">
-            <a href="#navbar"><h1>Gato Amigo</h1></a> <br>
-            <p>A gato amigo visa disponibilizar <br>
-                uma interface de cadastro para <br> 
-                doar e adotar um gatinho. <br> <br>
-                Não possuimos nenhum fim lucrativo, <br>
-                apenas informativo.</p>
+    <div id="gatos" class="gatos">
+
+        <div class="gatos-txth1">
+            <h1>A primeira associação dos gatos com humanos da qual se tem evidência ocorreu há cerca de 10 mil anos!</h1>
         </div>
 
         <div>
+            
+            <img src="pics/gatosegitoantigo.jpg" class="gatos-img1">
 
-            <a></a>
+            <img src="pics/tumba6kanosegitomumiasdegatos.webp" class="gatos-img2">
 
-            <a></a>
+            <img src="">
 
-            <p></p>
+        </div>
 
+    </div>
+
+    </main>
+
+    <!-- RODAPÉ -->
+
+    <rodape class="rodape">
+
+        <div class="rodape-gatoamigo">
+            <a href="#navbar"><h1>Gato Amigo</h1></a> <br>
+            <p>A gato amigo visa disponibilizar <br>
+                uma interface de cadastro para <br> 
+                as ONG's doar um gatinho e os <br>
+                usuários adotarem um ou mais gatos. <br> <br>
+                Nós sempre buscaremos um lar  <br>
+                próximo da ONG pois buscamos sempre <br>
+                A interação entre cliente e <br>
+                organização mais adequada.</p>
+        </div>
+
+        <div class="rodape-menu">
+            <h1>Menu</h1><br>
+            <a href="#home">Home</a><br>
+            <a href="#gatos">Gatos</a><br>
+            <a href="#ONG's">ONG's</a><br>
+            <a href="#Login">Login</a><br>
+            <a href="#Cadastro">Cadastro</a><br>
+            <a href="#gatosadotados">Alguns gatos adotados</a><br>
         </div>
 
     </rodape>
