tela cadastro + api

--- a/PROJETO INDIVIDUAL/22052023/web-data-viz/site/public/index.html
+++ b/PROJETO INDIVIDUAL/22052023/web-data-viz/site/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Gato Amigo</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
         <nav id="navbar">
@@ -47,48 +49,49 @@
     <!-- MAINPAGE -->
 
     <main>
-        
+
         <!--<img class="main-img" src="pics/gato.jpg">-->
 
-    <!-- Homepage -->
+        <!-- Homepage -->
 
-    <home>
+        <home>
 
-        <div href="index.html" id="home" class="home">
+            <div href="index.html" id="home" class="home">
 
-            <div class="home-gatos1">
-                <h1>Mais de trinta milhões de animais estão abandonados nas ruas do Brasil!</h1> <br> <br>
-                <h2>Desses trinta milhões, dez mihões são os gatos...</h2> <br> <br>
-                <h3>Você ONG, coloque aqui os gatos para serem doados enquanto usuários possam adotar eles!</h3>
+                <div class="home-gatos1">
+                    <h1>Mais de trinta milhões de animais estão abandonados nas ruas do Brasil!</h1> <br> <br>
+                    <h2>Desses trinta milhões, dez mihões são os gatos...</h2> <br> <br>
+                    <h3>Você ONG, coloque aqui os gatos para serem doados enquanto usuários possam adotar eles!</h3>
+                </div>
+
+                <div>
+                    <img class="main-img" src="pics/gato.jpg">
+                </div>
+
+            </div>
+
+        </home>
+
+        <!-- Gatos -->
+
+        <div id="gatos" class="gatos">
+
+            <div class="gatos-txth1">
+                <h1>A primeira associação dos gatos com humanos da qual se tem evidência ocorreu há cerca de 10 mil
+                    anos!</h1>
             </div>
 
             <div>
-                <img class="main-img" src="pics/gato.jpg">
+
+                <img src="pics/gatosegitoantigo.jpg" class="gatos-img1">
+
+                <img src="pics/tumba6kanosegitomumiasdegatos.webp" class="gatos-img2">
+
+                <img src="">
+
             </div>
 
         </div>
-
-    </home>
-
-    <!-- Gatos -->
-
-    <div id="gatos" class="gatos">
-
-        <div class="gatos-txth1">
-            <h1>A primeira associação dos gatos com humanos da qual se tem evidência ocorreu há cerca de 10 mil anos!</h1>
-        </div>
-
-        <div>
-            
-            <img src="pics/gatosegitoantigo.jpg" class="gatos-img1">
-
-            <img src="pics/tumba6kanosegitomumiasdegatos.webp" class="gatos-img2">
-
-            <img src="">
-
-        </div>
-
-    </div>
 
     </main>
 
@@ -97,12 +100,14 @@
     <rodape class="rodape">
 
         <div class="rodape-gatoamigo">
-            <a href="#navbar"><h1>Gato Amigo</h1></a> <br>
+            <a href="#navbar">
+                <h1>Gato Amigo</h1>
+            </a> <br>
             <p>A gato amigo visa disponibilizar <br>
-                uma interface de cadastro para <br> 
+                uma interface de cadastro para <br>
                 as ONG's doar um gatinho e os <br>
                 usuários adotarem um ou mais gatos. <br> <br>
-                Nós sempre buscaremos um lar  <br>
+                Nós sempre buscaremos um lar <br>
                 próximo da ONG pois buscamos sempre <br>
                 A interação entre cliente e <br>
                 organização mais adequada.</p>
@@ -121,6 +126,7 @@
     </rodape>
 
 </body>
+
 </html>
 
 <script src="mobnav/mobile-navbar.js"></script>
