--- a/PROJETO INDIVIDUAL/22052023/web-data-viz/site/public/cadastrousuario.html
+++ b/PROJETO INDIVIDUAL/22052023/web-data-viz/site/public/cadastrousuario.html
@@ -144,7 +144,7 @@
             return false;
         }
         else {
-            setInterval(mensagem_erro, 5000)
+            setInterval(mensagem_erro[5000])
         }
 
         // Enviando o valor da nova input
@@ -153,6 +153,7 @@
             headers: {
                 "Content-Type": "application/json"
             },
+
             body: JSON.stringify({
                 // crie um atributo que recebe o valor recuperado aqui
                 // Agora vá para o arquivo routes/usuario.js
@@ -163,6 +164,7 @@
                 emailServer: emailVar,
                 senhaServer: senhaVar
             })
+
         }).then(function (resposta) {
 
             console.log("resposta: ", resposta);
