Subindo site geral

--- a/PROJETO INDIVIDUAL/22052023/web-data-viz/site/public/Interface de Usuário/Dashboard Usuário.html
+++ b/PROJETO INDIVIDUAL/22052023/web-data-viz/site/public/Interface de Usuário/Dashboard Usuário.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/login.css">
-    <title>Login Usuário</title>
+    <link rel="stylesheet" href="css/uiusuario.css">
+    <title>Dashboard Usuário</title>
 </head>
-
 <body>
-    
+
     <header>
         <nav id="navbar">
-            <a class="Logo" href="index.html"><img class="Logo" src="pics/logo.png"></a>
+            <a class="Logo" href="pics/logo1.png"><img class="Logo" src="pics/logo.png"></a>
             <div class="mobile-menu">
                 <div class="line1"></div>
                 <div class="line2"></div>
@@ -41,37 +39,35 @@
                 </li>
 
                 <li>
-                    <a href="/">Cadastro</a>
+                    <a href="verificacaocad.html">Cadastro</a>
                 </li>
             </ul>
         </nav>
     </header>
 
+    <!-- INICIO DA DASHBOARD DO USUÁRIO -->
+
     <main>
 
-        <div class="form">
+        <div class="tela-interacao">
 
-            <h2 class="titulo">LOGIN</h2>
+            <div class="graficos">
 
-            <div class="form-inputs">
+                <div class="indicador">
 
-                <div class="form1">
+                </div>
 
-                    <label>E-mail</label>
-                    <div>
 
-                        <input id="email_input" class="input" id="email" placeholder="Digite o seu e-mail" type="text" required>
-                    </div>
+                <div class="dashboard-barra">
 
-                    <label>Senha</label>
-                    <div>
 
-                        <input id="senha_input" class="input" id="senha" placeholder="Digite a sua senha"type="text" required>
-                    </div>
+                </div>
 
-                    <div class="button">
-                        <a href="#"><button>Entrar</button></a>
-                    </div>
+            </div>
+
+            <div class="area-carrossel">
+
+                <div class="carrossel">
 
                 </div>
 
@@ -80,6 +76,6 @@
         </div>
 
     </main>
-
+    
 </body>
 </html>
