--- a/PROJETO INDIVIDUAL/Gato-Amigo/web-data-viz/site/public/Login Ong.html
+++ b/PROJETO INDIVIDUAL/Gato-Amigo/web-data-viz/site/public/Login Ong.html
@@ -37,11 +37,11 @@
                 </li>
 
                 <li>
-                    <a href="/">Login</a>
+                    <a href="#login">Login</a>
                 </li>
 
                 <li>
-                    <a href="/">Cadastro</a>
+                    <a href="verificacaocad.html">Cadastro</a>
                 </li>
             </ul>
         </nav>
