--- a/PROJETO INDIVIDUAL/Gato-Amigo/web-data-viz/site/public/verificacaologin.html
+++ b/PROJETO INDIVIDUAL/Gato-Amigo/web-data-viz/site/public/verificacaologin.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/verificacaocad.css">
-    <title>Verificação Cadastro</title>
+    <link rel="stylesheet" href="css/verificacaologin.css">
+    <title>Verificação Login</title>
 </head>
 
 <body>
@@ -37,11 +37,11 @@
                 </li>
 
                 <li>
-                    <a href="verificacaologin.html">Login</a>
+                    <a href="#login">Login</a>
                 </li>
 
                 <li>
-                    <a href="#cadastro">Cadastro</a>
+                    <a href="verificacaocad.html">Cadastro</a>
                 </li>
             </ul>
         </nav>
@@ -51,18 +51,18 @@
 
         <div class="estetica">
 
-            <h1>Antes de inicializar o cadastro, faça esta validação!</h1>
+            <h1>Validação para login!</h1>
 
             <div class="caixa-grande">
 
                 <div class="card">
 
-                    <h2>Quero adotar um gatinho.</h2>
+                    <h2>Usuário</h2>
 
                     <div class="cadastro-usuario">
 
                         <div class="button">
-                            <a href="cadastrousuario.html"><button>Cadastrar Usuário</button></a>
+                            <a href="Login Usuário.html"><button>Login de usuário</button></a>
                         </div>
 
                     </div>
@@ -71,12 +71,12 @@
 
                 <div class="card">
 
-                    <h2>Quero colocar um gatinho para adoção.</h2>
+                    <h2>ONG</h2>
 
                     <div class="cadastro-ong">
 
                         <div class="button">
-                            <a href="cadastroong.html"><button>Cadastrar ONG</button></a>
+                            <a href="Login Ong.html"><button>Login de ONG</button></a>
                         </div>
 
                     </div>
