--- a/PROJETO INDIVIDUAL/Gato-Amigo/web-data-viz/site/public/cadastrousuario.html
+++ b/PROJETO INDIVIDUAL/Gato-Amigo/web-data-viz/site/public/cadastrousuario.html
@@ -39,7 +39,7 @@
                 </li>
 
                 <li>
-                    <a href="login.html">Login</a>
+                    <a href="verificacaologin.html">Login</a>
                 </li>
 
                 <li>
@@ -147,7 +147,15 @@
 
         if (nomeVar == "" || sobrenomeVar == "" || celularVar == "" || dtnascVar == "" || emailVar == "" || senhaVar == "" || confirmacaoSenhaVar == "") {
             alert ('Os campos não podem estar vazios!');
-
+            return false;
+        } else if (celularVar.length != 11) {
+            alert ('O CNPJ deve conter 14 caracteres sem traços e pontos.');
+            return false;
+        } else if (emailVar.search("@") == -1) {
+            alert ('Necessário ter um @!');
+            return false;
+        } else if (senhaVar.length < 6) {
+            alert ('A senha tem de ser maior de 5 dígitos!');
             return false;
         }
 
