--- a/PROJETO INDIVIDUAL/Gato-Amigo/web-data-viz/site/public/index.html
+++ b/PROJETO INDIVIDUAL/Gato-Amigo/web-data-viz/site/public/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav id="navbar">
-            <a class="Logo" href="pics/logo1.png"><img class="Logo" src="pics/logo.png"></a>
+            <a class="Logo" href="index.html"><img class="Logo" src="pics/logo.png"></a>
             <div class="mobile-menu">
                 <div class="line1"></div>
                 <div class="line2"></div>
@@ -36,7 +36,7 @@
                 </li>
 
                 <li>
-                    <a href="/">Login</a>
+                    <a href="verificacaologin.html">Login</a>
                 </li>
 
                 <li>
@@ -196,10 +196,9 @@
             <h1>Menu</h1><br>
             <a href="#home">Home</a><br>
             <a href="#gatos">Gatos</a><br>
-            <a href="#ONG's">ONG's</a><br>
-            <a href="#Login">Login</a><br>
-            <a href="#Cadastro">Cadastro</a><br>
-            <a href="#gatosadotados">Alguns gatos adotados</a><br>
+            <a href="#ongs">ONG's</a><br>
+            <a href="verificacaologin.html">Login</a><br>
+            <a href="verificacaocad.html">Cadastro</a><br>
         </div>
 
     </rodape>
